--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.marq{
+  background: linear-gradient(to right,magenta,lightblue,white);
+}
+.background{
+  background: linear-gradient(to right,pink,lightblue,white);
+
+}
+.carousel-item img{
+  height:500px;
+}
+.fnt{
+  font-size: 30px;
+}
+.a:hover {
+  box-shadow: 10px 10px 5px black;
+}
+.b:hover{
+  box-shadow:20px 20px 10px  lightblue;
+}
